--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
                         <a class="nav-link" href="#">Conviértete en orador</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#" id="boton1">Comprar Tickets</a>
+                        <a class="nav-link" href="quieroticket.html" id="boton1">Comprar Tickets</a>
+
+                        
+                        
                       </li>            
                     </ul>
                   </div>
